--- a/scratch.html
+++ b/scratch.html
@@ -11,10 +11,10 @@
     <header>
         <h1>Logo</h1>
         <nav>
-            <a href="#" class="active">Home</a>
-            <a href="#">About</a>
+            <a href="https://peytonswan.github.io/index.html" class="active">Home</a>
+            <a href="https://peytonswan.github.io/solar_system.html">Universe</a>
             <a href="#">Services</a>
-            <a href="#">Contact</a>
+            <a href="https://peytonswan.github.io/resume.html">Contact</a>
         </nav>
     </header>
 
