--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Assignments</title>
+    <title>My Website</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap">
     <style>
         body {
             font-family: 'Press Start 2P', cursive;
-            background-color: #F7E7CE;
+            background-color: #070707 URL('https://st3.depositphotos.com/1008648/18224/i/450/depositphotos_182241654-stock-photo-spaceship-futuristic-interior-with-view.jpg');
             color: #070707;
             margin: 0;
             padding: 0;
             position: relative;
             min-height: 100vh;
+            z-index: -1;
         }
         header {
             background-color: #070707;  
@@ -100,7 +101,7 @@
     <header>
     
         <h1 class="pixelized">
-            Welcome to my Assignments Page<a href="https://github.com/peytonswan/peytonswan.github.io">!</a>
+            Welcome to my DATA-352 Page<a href="https://github.com/peytonswan/peytonswan.github.io">!</a>
         </h1>
         <h1>Website created by: Peyton Swan</h1>
     </header>
