--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <style>
         body {
             font-family: 'Press Start 2P', cursive;
-            background-color: #070707 URL('https://st3.depositphotos.com/1008648/18224/i/450/depositphotos_182241654-stock-photo-spaceship-futuristic-interior-with-view.jpg');
+            background-color: #070707;
+            background-image: URL('https://files.oaiusercontent.com/file-wyoYGcIDdt5r0iXoSMGZu2aq?se=2024-04-10T01%3A02%3A07Z&sp=r&sv=2021-08-06&sr=b&rscc=max-age%3D31536000%2C%20immutable&rscd=attachment%3B%20filename%3D5cf2615d-5f1d-47e6-b0b2-60ca880adc15.webp&sig=kdnNebmr8DZkFTrGMQVol0Oxt2NFsGIW9oLim55vYFI%3D');
+            background-repeat: no-repeat;
+            background-size: cover;
             color: #070707;
             margin: 0;
             padding: 0;
