--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <style>
         body {
             font-family: 'Press Start 2P', cursive;
-            background-color: #070707;
-            background-image: URL('https://files.oaiusercontent.com/file-wyoYGcIDdt5r0iXoSMGZu2aq?se=2024-04-10T01%3A02%3A07Z&sp=r&sv=2021-08-06&sr=b&rscc=max-age%3D31536000%2C%20immutable&rscd=attachment%3B%20filename%3D5cf2615d-5f1d-47e6-b0b2-60ca880adc15.webp&sig=kdnNebmr8DZkFTrGMQVol0Oxt2NFsGIW9oLim55vYFI%3D');
+            background-color: #000000;
+            background-image: url('assests/mount2.png');
             background-repeat: no-repeat;
             background-size: cover;
             color: #757373;
