--- a/Assignments.html
+++ b/Assignments.html
@@ -121,7 +121,9 @@
             <h2><a href="https://peytonswan.github.io/sigcse.html">SIGCSE</a></h2>
             <h2><a href="https://peytonswan.github.io/meme_calculator.html">Loss Aversion Calculator</a></h2>
             <h2><a href="https://peytonswan.github.io/scratch.html">Scartch</a></h2>
-            <h2><a href="https://peytonswan.github.io/kindafunny.html">Kinda Funny</a></h2>
+            <h2><a href="https://peytonswan.github.io/1.html">Kinda Funny</a></h2>
+            <h2><a href="https://peytonswan.github.io/2.html">Kinda Funny</a></h2>
+            <h2><a href="https://peytonswan.github.io/3.html">Kinda Funny</a></h2>
         </section>
     </main>
     
