--- a/2.html
+++ b/2.html
@@ -23,7 +23,7 @@
         <img src="assets/mount1.png" class="mount1">
         <img src="assets/bush2.png" class="bush2">
 
-        <h1 class="title">Justice Department Secures Groundbreaking Settlement Agreement with Meta Platforms, Formerly Known as Facebook, to Resolve Allegations of Discriminatory Advertising</h1>
+        <h1 class="title">Justice Department Secures Settlement with Meta Platforms, to Resolve Discriminatory Advertising</h1>
 
         <img src="assets/bush1.png" class="bush1">
         <img src="assets/leaf2.png" class="leaf2">
