--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <h2><a href="https://peytonswan.github.io/Assignments.html">Assignments</a></h2>
                 <h2><a href="https://peytonswan.github.io/forfunindexfile.html">For Fun</a></h2>
                 <h2><a href="https://peytonswan.github.io/scratch.html">Scratch</a></h2>
-                <h2><a href="https://peytonswan.github.io/kindafunny.html">Kinda Funny</a></h2>
+                <h2><a href="https://peytonswan.github.io/1.html">Kinda Funny</a></h2>
         </section>
     </main>
     
