--- a/Assignments.html
+++ b/Assignments.html
@@ -122,7 +122,7 @@
             <h2><a href="https://peytonswan.github.io/meme_calculator.html">Loss Aversion Calculator</a></h2>
             <h2><a href="https://peytonswan.github.io/scratch.html">Scartch</a></h2>
             <h2><a href="https://peytonswan.github.io/1.html">Kinda Funny</a></h2>
-            <h2><a href="https://peytonswan.github.io/2.html">Kinda Funny</a></h2>
+            <h2><a href="https://peytonswan.github.io/2.html">Justice Department Secures Settlement with Meta Platforms, to Resolve Discriminatory Advertising</a></h2>
             <h2><a href="https://peytonswan.github.io/3.html">Kinda Funny</a></h2>
         </section>
     </main>
