--- a/3.html
+++ b/3.html
@@ -23,7 +23,7 @@
         <img src="assets/mount1.png" class="mount1">
         <img src="assets/bush2.png" class="bush2">
 
-        <h1 class="title">Housing Department Slaps Facebook With Discrimination Charge</h1>
+        <h1 class="title">Housing Department Slaps Facebook</h1>
 
         <img src="assets/bush1.png" class="bush1">
         <img src="assets/leaf2.png" class="leaf2">
