--- a/1.html
+++ b/1.html
@@ -38,9 +38,9 @@
         <br>
         <p>In contemporary gaming discourse, the underrepresentation of Black hairstyles stands out as a significant issue. Delving into the insights of "We Need To Fix Black Hair in Video Games - The Blessing Show" sheds light on the critical role of diverse character creation in the gaming landscape.</p>
         <br>
-        <p>Main Thoughts on Representation in Video Games:</p>
-        <br>
-        <p>It's concerning how game developers consistently neglect Black hairstyles, failing to recognize the importance of inclusion for all players.
+        <p>Main Thoughts on Representation in Video Games:
+            
+        It's concerning how game developers consistently neglect Black hairstyles, failing to recognize the importance of inclusion for all players.
         The anecdote about a friend striving to improve their company, hindered by the lack of diversity in their team, underscores the necessity of incorporating diverse perspectives, potentially through hiring experts in Black hair care.
         The video advocates for heightened public scrutiny of games with limited Black hair options, emphasizing the collective responsibility to demand inclusivity from developers.
         Personal narratives, such as experiences with real-life hair regulations, underscore the intrinsic value of representation in gaming as a means of self-expression and identity affirmation.
