--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <section>
             <nav>
                 <a href="https://peytonswan.github.io/index.html" class="active">Home</a>
-                <a href="https://peytonswan.github.io/solar_system.html">Universe</a>
+                <a href="https://peytonswan.github.io/main_galaxy_index.html">Universe</a>
                 <a href="#">Services</a>
                 <a href="https://peytonswan.github.io/resume.html">Contact</a>
             </nav>
@@ -126,7 +126,7 @@
                 <h2><a href="https://peytonswan.github.io/plot.html">Plot Cube</a></h2>
                 <h2><a href="https://peytonswan.github.io/Assignments.html">Assignments</a></h2>
                 <h2><a href="https://peytonswan.github.io/forfunindexfile.html">For Fun</a></h2>
-                <h2><a href="https://peytonswan.github.io/scratch.html">Scratch</a></h2>
+                <h2><a href="https://peytonswan.github.io/main_galaxy_index.html">Galaxy</a></h2>
                 <h2><a href="https://peytonswan.github.io/1.html">Kinda Funny</a></h2>
         </section>
     </main>
