--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <a href="https://peytonswan.github.io/resume.html">Contact</a>
             </nav>
                 <p>My Personal Website now in HTML!</p>
-                <p>Below are links to my resume, assignments for this class, and more!</p>
+                <p>Below are links to my projects, assignments for this class, and more!</p>
                 
                 <h2><a href="https://peytonswan.github.io/planet_jupitar_index.html">Jupiter</a></h2>
                 <h2><a href="https://www.linkedin.com/in/your-profile">LinkedIn</a></h2>
