--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <p>My Personal Website now in HTML!</p>
                 <p>Below are links to my projects, assignments for this class, and more!</p>
                 
-                <h2><a href="https://peytonswan.github.io/planet_jupitar_index.html">Jupiter</a></h2>
+                <h2><a href="https://peytonswan.github.io/planet_jupiter_index.html">Jupiter</a></h2>
                 <h2><a href="https://www.linkedin.com/in/your-profile">LinkedIn</a></h2>
                 <h2><a href="https://peytonswan.github.io/solar_system.html">Solar System Project</a></h2>
                 <h2><a href="https://peytonswan.github.io/plot.html">Plot Cube</a></h2>
